# Igg-Api

./: README.md  pyproject.toml
igg_api/: main.py  model.py  router.py  utils.py
igg_api/calls/: __init__.py  search.py
